--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: FRP Client
-url: https://github.com/huxiaoxu2019/hass-addon-frp-client
-maintainer: Xiaoxu Hu <admin@ihuxu.com>
+name: FRP-0.20.0 Client
+url: https://github.com/Trace-star/hass-addon-frp-0.20.0--client
+maintainer: startrace
